# PostMyRustache

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
dev-db/: docker-compose.yaml  northwind.sql
src/: auth.rs  backend.rs  config.rs  lib.rs  main.rs  query.rs  server.rs
tests/: comprehensive_compatibility_test.sql  comprehensive_test.rs  integration_tests.rs  mysql_compatibility_integration.rs  mysql_compatibility_test.sql  server_startup_test.rs  simple_mysql_test.rs  specific_error_test.rs  sql_error_handling_test.rs
