[package]
name = "postmyrustache"
version = "0.2.0"
edition = "2021"

[lib]
name = "postmyrustache"
path = "src/lib.rs"

[dependencies]

tokio = { version = "1.40.0", features = ["full"] }
bytes = "1.0.1"
opensrv-mysql = "0.7.0"
async-trait = "=0.1.77"
byteorder = "=1.5.0"
chrono = "=0.4.35"
mysql_common = "=0.32.0"
nom = "=7.1.3"
tokio-postgres = "0.7.12"
dotenvy = "0.15.7"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
